[metadata]
name = colcon-cc-build
version = attr: colcon_cc_build.__version__
url = https://colcon.readthedocs.io
project_urls =
  Github = https://github.com/ros2/cross_compile
author_email = ros-contributions@amazon.com
maintainer_email = ros-contributions@amazon.com
classifiers =
    Development Status :: 3 - Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX
    Programming Language :: Python
    Topic :: Software Development :: Build Tools
license = Apache License, Version 2.0
description = Extension for colcon for cross compiling ROS 2 packages.
long_description = file: README.md
keywords = colcon

[options]
install_requires =
  colcon-core
  docker>=3.7.2
packages = find:
# tests_require =
#   flake8
#   flake8-blind-except
#   flake8-builtins
#   flake8-class-newline
#   flake8-comprehensions
#   flake8-deprecated
#   flake8-docstrings
#   flake8-import-order
#   flake8-quotes
#   pep8-naming
#   pylint
#   pytest
#   pytest-cov
#   scspell3k>=2.2
zip_safe = true

# [tool:pytest]
# filterwarnings =
#     error
# junit_suite_name = colcon-test-result

[options.entry_points]
colcon_core.verb =
    cc-setup-sysroot = colcon_cc_build.verb.cc_build:CCSetupSysrootVerb
    cc-build = colcon_cc_build.verb.cc_build:CCBuildVerb

[flake8]
import-order-style = google
